--- a/script/build
+++ b/script/build
@@ -3,7 +3,7 @@ set -eux
 NAME=php-fpm-exporter
 ARCH=amd64
 
-for OS in darwin linux; do
+for OS in freebsd darwin linux; do
     FILE=${NAME}.${OS}.${ARCH}
     CGO_ENABLED=0 GOOS=${OS} GOARCH=${ARCH} go build -o ${FILE} ./cmd/${NAME}
     SHA=`openssl sha256 ${FILE} | awk '{print $2}'`
